--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body>
     <div class="container">
-        <img src="images/image-qr-code.png" alt="">
+        <img src="images/image-qr-code.png" alt="qr-code">
         <h3>Improve your front-end skills by building projects</h3>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
-            Coded by Abdullah Mohammad
+            Coded by <a href="https://github.com/abdullahmd2">Abdullah Mohammad</a>
         </div>
     </div>
 </body>
