--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
-            Coded by <a href="https://github.com/abdullahmd2">Abdullah Mohammad</a>
+            Coded by <a href="https://github.com/abdullahmd2" target="_blank">Abdullah Mohammad</a>
         </div>
     </div>
 </body>
